src/test/ui/range/range_traits-7.stderr
error: compilation successful
  --> $DIR/range_traits-7.rs:9:1
   |
LL | fn main() {} //~ ERROR success
   | ^^^^^^^^^^^^

error: aborting due to previous error

